# CRMMaster

./: .gitignore  Makefile  Readme.md  main.py  pyproject.toml  requirements.txt  setup.cfg  test_database.py
core/: __init__.py  currency_dialog.py  form_dialog.py  table_utils.py  validators.py  widget_utils.py
core/dialogs/: currency_dialog.py  form_dialog.py
core/utils/: db_utils.py  table_utils.py  widget_utils.py
core/widgets/: base_page_widget.py
database/: __init__.py  database_functions.py  table_utils.py  widget_functions.py
database/clientdb/: __init__.py  client_database.py  client_form_dialog.py  client_widget.py
database/partnerdb/: __init__.py  partner_database.py  partner_form_dialog.py  partner_widget.py
database/supplierdb/: __init__.py  supplier_database.py  supplier_form_dialog.py  supplier_widget.py
supplierdb/: supplier_database.py  supplier_form_dialog.py  supplier_widget.py
ui/: __init__.py  main_window.py
