[project]
name = "inventory-manager"
version = "0.1.0"
description = "A desktop inventory management app with partners and suppliers"
authors = [
    { name = "Jowie", email = "jtanbp@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    "greenlet==3.2.4",
    "psycopg2-binary==2.9.10",
    "PySide6==6.9.2",
    "PySide6-Addons==6.9.2",
    "PySide6-Essentials==6.9.2",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "shiboken6==6.9.2",
    "typing_extensions==4.15.0"
]

[project.optional-dependencies]
dev = [
    "flake8==7.3.0",
    "mccabe==0.7.0",
    "pycodestyle==2.14.0",
    "pyflakes==3.4.0",
    "pytest==8.4.2",
    "pip-tools==7.5.0"  # lets you export requirements.txt
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__"]
